# bdev

./: .gitignore  .golangci.yml  .goreleaser.yaml  ANALYSIS_REPORT.md  Makefile  README.md  agent_tools.html  anthropic_claude_design.md  bdev_design_system_v2.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
ai/prompts/: assistant.md
cli/: main.py  requirements.txt
cli/commands/: agents.py  ai.py  analytics.py  config.py  devtools.py  git.py  multi.py  projects.py  quick.py  secrets.py  system.py  theme.py  workflow.py
cli/core/: analytics.py  config.py  nlp.py  repl.py  session.py  vault.py  workflow.py
cli/core/ai/: engine.py
cli/utils/: branding.py  config.py  context.py  helpers.py  theme.py  ui.py
data/: projects.json  tasks.json
insp-data/: B.DEV CLI Design System.ts
internal/ai/agents/: agents.go  agents_test.go
internal/ai/engine/: client.go  interface.go  mock.go
pkg/ui/: components.go  components_test.go  theme.go  theme_test.go
powershell/: profile.ps1
powershell/themes/: bdev.omp.json
scripts/: backup.ps1  clean-system.ps1  db-helper.ps1  docker-helper.ps1  git-helper.ps1  health-check.ps1  new-project.ps1  npm-helper.ps1  port-manager.ps1  project-stats.ps1  setup-bdev.ps1  sync-dotfiles.ps1  watch.ps1
templates/angular-app/: .gitignore  README.md  package.json
templates/laravel-api/: .env.example  .gitignore  README.md  composer.json
templates/nextjs-starter/: .gitignore  .prettierrc.js  README.md  package.json
templates/python-cli/: .gitignore  README.md  main.py  pyproject.toml
workflows/: BADIE.yml
(+33 files in other folders)
